Update unknown variant toString